--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,25 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.wrapper {
+  min-height: 100%;
+
+  /* Equal to height of footer */
+  /* But also accounting for potential margin-bottom of last child */
+  margin-bottom: -37px;
+}
+
+footer {
+  padding-top: 10px;
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  height: 40px;
+  color: #000;
+  background-color: rgba(61, 175, 42, 0.87);
+}
+
+.push {
+  height: 50px;
+}
